Cambiando el titulo Somos Xanakena

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="container">
       <p class="hello-word"> <img class="logo" src="src/images/logo.png" alt="">Hello Word!
       </p>
-      <h1 class="">Nosotros somos <span>X</span>anakena.</h1>
+      <h1 class="">Somos <span>X</span>anakena.</h1>
       <p>
         Somos un pequeño estudio de diseño web, creamos sitios receptivos para pequeñas empresas y startups.
         ¿Interesado? Puede consultar algunos de nuestros proyectos favoritos a continuación y puede contactarnos</p>
