--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -68,10 +68,10 @@
                 </div>
                 <!--Mensaje-->
                 <label for="exampleMessage">Mensaje:</label>
-                <textarea class="u-full-width" placeholder="Hi Dave …" id="exampleMessage"></textarea>
+                <textarea class="u-full-width" placeholder="Hola, Xanakena..." id="exampleMessage"></textarea>
                 <label class="example-send-yourself-copy">
                     <input type="checkbox">
-                    <span class="label-body">Enviarme una copia del mensaje</span>
+                    <span class="label-body">Enviame una copia del mensaje</span>
                 </label>
                 <!--Botón para enviar mensaje-->
                 <input class="button-primary" type="submit" value="Enviar mensaje">
