--- a/src/pages/contacto.html
+++ b/src/pages/contacto.html
@@ -71,7 +71,7 @@
                 <textarea class="u-full-width" placeholder="Hola, Xanakena..." id="exampleMessage"></textarea>
                 <label class="example-send-yourself-copy">
                     <input type="checkbox">
-                    <span class="label-body">Enviame una copia del mensaje</span>
+                    <span class="label-body">Enviame una copia</span>
                 </label>
                 <!--Botón para enviar mensaje-->
                 <input class="button-primary" type="submit" value="Enviar mensaje">
