--- a/src/pages/equipo.html
+++ b/src/pages/equipo.html
@@ -46,16 +46,13 @@
             <!--Card, Carlos Velásquez-->
             <div class="card">
                 <img src="../../src/images/carlos.jpg" alt="John" style="width:100%">
-                <p>Carlos Velásquez</p>
-                <p class="title-card">Ingeniero de Sistemas</p>
-                <hr>
+                <p class="title-card">Carlos Velásquez</p>
                 <p>Desarrollador Web</p>
-                <p>It Support Specialist</p>
+                <hr>
                 <div style="margin: 24px 0;">
-                    <a href="#"><i class="fa fa-dribbble"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
-                    <a href="#"><i class="fa fa-facebook"></i></a>
+                    <a href="#">Linkedin</a>
+                    <a href="#">Twitter</a>
+                    <a href="#">GitHub</a>
                 </div>
                 <a class="button button-primary u-pull-center" href="">Contacto</a>
             </div>
